@startuml

class Account
{
	Integer ID
	string Email
	string Pseudo
	string Password
}

class Profile
{
	Integer ID
	String FirstName
	String LastName
	Integer Age
	String ImageUrl
	Account acount
}

Account "1.1" -- "1.*" Profile

enum TraitType
{
	POIDS
	TAILLE
	IMC
}

class Trait
{ 
	Integer ID
	String value
	TratType Type
	DateTime Date
	Profile Profile
}

Trait "0.*" -- "1.1" TraitType

Trait "0.*" -- "1.1" Profile

enum PlanType
{
	IMC
}

class Plan
{
	Integer ID
	String Name
	PlanType Type
	Profile Profile
	Datetime BeginDate
	Datetime EndDate
}

Plan "0.*" -- "1.1" PlanType
Plan "0.*" -- "1.1" Profile

@enduml